--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.2",
     "core-js": "^2.6.5",
-    "tinymce": "^5.0.16",
+    "moment-timezone": "^0.5.26",
+    "pc-bootstrap4-datetimepicker": "^4.17.50",
     "v-select2-component": "^0.3.9",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-bootstrap-datetimepicker": "^5.0.1",
+    "vue-i18n-plugin": "^0.2.2",
+    "vue-moment": "^4.0.0",
+    "vue-router": "^3.1.3",
+    "vue-sweetalert2": "^2.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
